--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,4 @@
 # time in seconds to wait before cancelling vote
 vote-time: 60
-# percentage of people required to skip the night in decimals
+# percentage of people required to skip the night in decimals (must have a decimal point)
 vote-percentage: 0.5
