--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,13 @@ repositories {
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
     maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+    mavenLocal()
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.16.4-R0.1-SNAPSHOT'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+    compileOnly 'org.spigotmc:spigot:1.16.5-R0.1-SNAPSHOT'
 }
 
 processResources {
